Fix: Alignments and images

--- a/styles.less
+++ b/styles.less
@@ -175,6 +175,72 @@
     font-size: 1rem;
   }
 }
+.productHover() {
+  &:hover {
+    transform: scale(1.1);
+    transition: 0.5s ease all;
+    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+  }
+
+  @media (max-width: 600px) {
+    transform: none;
+    transition: none;
+    box-shadow: 10px 10px 10px #bebebe, -10px -10px 10px #ffffff;
+  }
+}
+.productAlignment() {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.productHeader() {
+  font-size: 1.2rem;
+  font-family: semi;
+  margin: auto;
+  color: @primaryNavyHeader;
+
+  @media (min-width: 605px) and (max-width: 900px) {
+    font-size: 0.6rem;
+  }
+}
+
+.productStar() {
+  color: #ffae00;
+  font-size: 1rem;
+
+  @media (min-width: 605px) and (max-width: 900px) {
+    font-size: 0.6rem;
+  }
+}
+
+.productRating() {
+  margin: 0 0.5rem;
+  font-size: 1.2rem;
+  font-family: regular;
+
+  @media (min-width: 605px) and (max-width: 900px) {
+    font-size: 0.6rem;
+  }
+}
+
+.productButton() {
+  background-color: transparent;
+  border: 1px @primaryOrange solid;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+
+  @media (min-width: 605px) and (max-width: 900px) {
+    padding: 0 0.6rem;
+  }
+
+  &:hover {
+    background-color: @primaryOrange;
+    color: @primaryButtontext;
+    transform: scale(1.1);
+    transition: 0.5s ease all;
+    box-shadow: -1px 21px 24px -16px rgba(238, 89, 2, 0.75);
+  }
+}
 // Default sizing
 * {
   padding: 0;
@@ -186,36 +252,51 @@
 //
 // Header Section
 .nav-container {
+  width: 100vw;
+  position: fixed;
+  text-align: center;
+  background-color: @primaryButtontext;
+  z-index: 10;
+
   .nav-wrapper {
-    .centerTheme();
+    .centerTheme;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
+    padding: 0.5rem 0;
 
     @media (max-width: 600px) {
       width: 90%;
     }
 
     .nav-logo-wrapper {
-      @media (max-width: 600px) {
-        flex-grow: 1;
-      }
       .nav-logo {
         .logoHeader();
       }
     }
+
     .nav-tab-wrapper {
-      display: flex;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      justify-items: center;
+      align-items: center;
 
       .nav-tab-marign {
         margin: 0 1rem;
 
         .nav-tab-link {
           .linkRemoval();
+
           .nav-tab-text {
             font-family: regular;
             color: @primaryNavyHeader;
+            margin: auto;
+
+            &:hover {
+              transform: scale(1.2);
+              transition: 0.4s ease all;
+              color: @primaryOrangetext;
+            }
           }
         }
       }
@@ -253,13 +334,20 @@
 .landing-section {
   .landing-container {
     position: relative;
-    background-color: #ffffff;
-    background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
-    z-index: -3;
 
-    .landing-background {
+    .landing-gradiant-background {
       position: absolute;
       top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #ffffff;
+      background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+      z-index: -4;
+    }
+    .landing-background {
+      position: absolute;
+      top: 8%;
       right: 5%;
       height: 100%;
       object-fit: contain;
@@ -267,6 +355,7 @@
 
       @media (max-width: 600px) {
         width: 100%;
+        top: 0;
         right: 0;
       }
     }
@@ -292,14 +381,31 @@
             width: 100%;
             text-align: center;
           }
+
           .landing-header {
             .mainHeader();
+
+            @media (max-width: 600px) {
+              color: @backgroungPrimary;
+              letter-spacing: 2px;
+              text-shadow: 2px 2px 33px rgba(0, 0, 0, 0.6);
+            }
           }
+
           .landing-description {
             .mainDescription();
+
+            @media (max-width: 600px) {
+              color: @backgroungPrimary;
+              padding: 0 1rem;
+              letter-spacing: 2px;
+              text-shadow: 2px 2px 50px rgba(0, 0, 0, 0.6);
+            }
           }
+
           .landing-button {
             .primaryButton();
+
             .landing-button-link {
               .linkRemoval();
             }
@@ -335,8 +441,8 @@
 
           .sample-grid-image {
             width: 25rem;
-            height: 100%;
             object-fit: cover;
+            margin: auto;
 
             @media (max-width: 600px) {
               width: 20rem;
@@ -486,6 +592,84 @@
         }
       }
       .feature-product-wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        padding: 2rem 0;
+
+        @media (max-width: 600px) {
+          grid-template-columns: repeat(1, 1fr);
+        }
+        .feature-product-card {
+          border-radius: 0.5rem;
+          max-width: 18em;
+          .productHover();
+
+          @media (max-width: 600px) {
+            margin: 2rem 0;
+            border: 1px #f5dbc6 solid;
+          }
+
+          @media (min-width: 605px) and (max-width: 900px) {
+            max-width: 10em;
+          }
+
+          .feature-card-image-wrapper {
+            text-align: center;
+            background-color: #f5dbc6;
+            border-radius: 0.5rem;
+            .feature-image {
+              width: 65%;
+              object-fit: contain;
+            }
+          }
+          .feature-card-text-wrapper {
+            padding: 1rem;
+            .feature-card-name-wrapper {
+              .productAlignment();
+              padding: 0.5rem 0;
+
+              .feature-name-div {
+                .feature-card-name {
+                  .productHeader();
+                }
+              }
+
+              .feature-rating-wrapper {
+                .productAlignment();
+
+                .feature-card-star {
+                  .productStar();
+                }
+                .feature-card-rating {
+                  .productRating();
+                }
+              }
+            }
+
+            .feature-card-price-wrapper {
+              .productAlignment();
+
+              padding: 0.5rem 0;
+
+              .feature-card-price {
+                .productHeader();
+              }
+              .feature-button {
+                .productButton();
+
+                .feature-text-link {
+                  .linkRemoval();
+                  color: @primaryNavyHeader;
+
+                  &:hover {
+                    color: @primaryButtontext;
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -501,7 +685,7 @@
   padding: 6rem 0 8rem 0;
 
   @media (max-width: 600px) {
-    padding: 0 0 6rem 0;
+    padding: 0 1rem 6rem 1rem;
   }
 
   @media (min-width: 605px) and (max-width: 900px) {
